cambios para la API REST
he añadido un nuevo DTO para los controler web que necesitan todos los atributos del producto, he realizado cambios en losmappers para evitar stack overflow por relaciones circulares, y he cambiado los controladores para que usen DTO, tambien se ha arreglado un error en la pantalla de error